--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,7 +7,12 @@
     font-family: titleFont;
     src: url(fonts/d3euronis/D3Euronism.ttf);
 }
-
+.mainMenu{
+    width: 100%;
+}
+.ui.secondary.inverted.pointing.menu .active.item{
+    border-color: transparent !important;
+}
 body{
     font-size: 15px!important;
 }
